<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_custom_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#A8DCFFAB"
    android:padding="5dp">


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_water"
                android:elevation="5dp"
                android:text="@string/víz"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <com.budiyev.android.circularprogressbar.CircularProgressBar
                android:id="@+id/water"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:animateProgress="true"
                app:backgroundStrokeColor="#000000"
                app:backgroundStrokeWidth="1dp"
                app:drawBackgroundStroke="false"
                app:foregroundStrokeCap="butt"
                app:foregroundStrokeColor="@color/progressKek"
                app:foregroundStrokeWidth="3dp"
                app:indeterminate="false"
                app:indeterminateMinimumAngle="45"
                app:indeterminateRotationAnimationDuration="1200"
                app:indeterminateSweepAnimationDuration="600"
                app:maximum="600"
                app:progress="5"
                app:progressAnimationDuration="100"
                app:startAngle="100" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_sugar"
                android:elevation="5dp"
                android:text="@string/sugar"

                android:textAlignment="center"
                android:textColor="@color/black" />

            <com.budiyev.android.circularprogressbar.CircularProgressBar
                android:id="@+id/sugar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:animateProgress="true"
                app:backgroundStrokeColor="#000000"
                app:backgroundStrokeWidth="1dp"
                app:drawBackgroundStroke="false"
                app:foregroundStrokeCap="butt"
                app:foregroundStrokeColor="#29b6f6"
                app:foregroundStrokeWidth="3dp"
                app:indeterminate="false"
                app:indeterminateMinimumAngle="45"
                app:indeterminateRotationAnimationDuration="1200"
                app:indeterminateSweepAnimationDuration="600"
                app:maximum="50000"
                app:progress="500"
                app:progressAnimationDuration="100"
                app:startAngle="100" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_starch"
                android:elevation="5dp"
                android:text="@string/starch"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <com.budiyev.android.circularprogressbar.CircularProgressBar
                android:id="@+id/starch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:animateProgress="true"
                app:backgroundStrokeColor="#000000"
                app:backgroundStrokeWidth="1dp"
                app:drawBackgroundStroke="false"
                app:foregroundStrokeCap="butt"
                app:foregroundStrokeColor="#29b6f6"
                app:foregroundStrokeWidth="3dp"
                app:indeterminate="false"
                app:indeterminateMinimumAngle="45"
                app:indeterminateRotationAnimationDuration="1200"
                app:indeterminateSweepAnimationDuration="600"
                app:maximum="10000"
                app:progress="5"
                app:progressAnimationDuration="100"
                app:startAngle="100" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_centerHorizontal="true">

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/uveg_ripple"
                android:elevation="5dp"
                android:text="@string/n"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/nitrogen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="1"
                android:max="40" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/uveg_ripple"
                android:elevation="5dp"
                android:text="@string/p"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/foszfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="1"
                android:max="40" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/uveg_ripple"
                android:elevation="5dp"
                android:text="@string/k"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/kalium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_gravity="center"
                android:progress="1"
                android:max="40" />
        </FrameLayout>
    </LinearLayout>


</RelativeLayout>